menu bar for mobile devices, and some style modification in bootstrap gridview

--- a/StartUp/StartUp.csproj
+++ b/StartUp/StartUp.csproj
@@ -219,6 +219,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Kepler.mdf" />
+    <Content Include="App_Data\Kepler_log.ldf">
+      <DependentUpon>Kepler.mdf</DependentUpon>
+    </Content>
     <Content Include="bootstrap\css\bootstrap-theme.css" />
     <Content Include="bootstrap\css\bootstrap-theme.min.css" />
     <Content Include="bootstrap\css\bootstrap.css" />
